--- a/.github/workflows/hourly-data-pipeline.yml
+++ b/.github/workflows/hourly-data-pipeline.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install jupyter nbconvert pandas numpy boto3 requests matplotlib seaborn scikit-learn shap python-dotenv json 
+          pip install jupyter nbconvert pandas numpy boto3 requests matplotlib seaborn scikit-learn shap python-dotenv 
           
       - name: Run feature extraction from API
         run: |
