--- a/.github/workflows/daily-model-pipeline.yml
+++ b/.github/workflows/daily-model-pipeline.yml
@@ -1,12 +1,12 @@
-name: Daily Model Training and Prediction
+name: Hourly Data Pipeline
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Run daily at midnight UTC
+    - cron: '0 * * * *'  # Run every hour
   workflow_dispatch:  # Allow manual triggering
 
 jobs:
-  run-model-pipeline:
+  run-data-pipeline:
     runs-on: ubuntu-latest
     
     steps:
@@ -21,14 +21,17 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install jupyter nbconvert pandas numpy boto3 requests matplotlib seaborn scikit-learn==1.3.2 shap python-dotenv
+          pip install jupyter nbconvert pandas numpy boto3 requests matplotlib seaborn scikit-learn shap python-dotenv 
           
-      - name: Run model training
+      - name: Train Model
         run: |
-          jupyter nbconvert --to script model_train.ipynb
-          python model_train.py
-          
-      - name: Run prediction
+          jupyter nbconvert --to script train_model.ipynb
+          python train_model.py
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+ 
+      - name: Predict and Evaluate
         run: |
           jupyter nbconvert --to script prediction.ipynb
           python prediction.py
