--- a/.github/workflows/daily-model-pipeline.yml
+++ b/.github/workflows/daily-model-pipeline.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Predict and Evaluate
         run: |
           jupyter nbconvert --to script prediction.ipynb
-          python prediction.py
+          python3 prediction.py
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
